# deep-dive

./: .gitignore  README.md  SETUP.md  _kerneltest.py  pyproject.toml  requirements.txt
excel files/: Basic Leontief quantity and price models.xlsx  Supply and Use framework.xlsx
notebooks/: 1. Foundations (test database).ipynb  2. Real databases (EXIOBASE).ipynb  3. Add sectors and shocks (AI scenarios).ipynb  Corso_MARIO.ipynb  Exercise 1 - Build your own SUT.ipynb  MARIO_course.ipynb  custom_sut_template.xlsx  custom_sut_template_filled.xlsx
tools/: build_notebook.py
